--- a/src/main/java/org/ednovo/gooru/client/mvp/classpages/edit/editclasspage.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/classpages/edit/editclasspage.css
@@ -943,7 +943,7 @@ margin-bottom: -10px;
 .classcodeStyles{
 	display: inline-block;
 	width: 70px !important;
-	height: 30px !important;
+	height: 25px !important;
 	font-size: 12px !important;
 	padding: 0 5px;
 	border: 0px;
@@ -955,7 +955,7 @@ margin-bottom: -10px;
 
 
 .classcodeLabel{
-	width: 70px !important;
+	width: 77px !important;
 	height: 30px !important;
 	border: 0px solid #ccc;
 	font-size: 12px !important;
@@ -1321,7 +1321,7 @@ margin-bottom: -10px;
 	border: 8px solid;
 	border-color: #999 transparent transparent transparent;
 	float: right;
-	margin-top: 4px;
+	margin-top: -10px;
 	margin-left: 7px;
 	border-bottom: none;
 	cursor: pointer;
@@ -1347,7 +1347,7 @@ margin-bottom: -10px;
 	background: #FFF;
 	padding: 7px;
 	border: 1px solid #ccc;
-	height: 12px;
+	height: 28px;
 }
 
 .selectedStudent{
@@ -1365,8 +1365,8 @@ margin-bottom: -10px;
 }
 
 .student{
-	width: 93% !important;
-	height: 16px !important;
+	width: 100% !important;
+	height: 22px !important;
 	font-size: 13px !important;
 	color: #515151 !important;
 	cursor: pointer !important;
@@ -1388,7 +1388,7 @@ margin-bottom: -10px;
 	overflow-x: hidden !important;
 	overflow-y: auto !important;
 	position: absolute !important;
-	width: 153px;
+	width: 140px;
 	border: 1px solid #ccc;
 }
 
